# geant4-learning

./: README.md
Geometry/: CMakeLists.txt  vis.mac
Geometry/include/: ActionInitialization.hh  DetectorConstruction.hh
Geometry/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
Minimal/: CMakeLists.txt  Minimal.cc  vis.mac
Minimal/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh
Minimal/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
